<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allscreensbcg" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/darkbar"
        android:gravity="center"
        android:text="@string/new_game_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/type"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/game_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/game_types"
            android:prompt="@string/game_type_prompt" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/mode_spinner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/mode"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/modes"
            android:prompt="@string/mode_prompt" />
        
        <com.strumsoft.wordchainsfree.helper.ImageViewButton android:id="@+id/question_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/app_icon"
            android:layout_marginLeft="7dp"/>
        
    </LinearLayout>

    <Button
        android:id="@+id/from_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mode_spinner_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/blueselector"
        android:text="@string/fb_friends"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/from_friends"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/vscomputer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/or"
        android:layout_marginTop="7dp"
        android:orientation="horizontal" >

        <CheckBox android:id="@+id/vscomputer_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"/>
        
        <Button
            android:id="@+id/vscomputer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:enabled="false"
            android:background="@drawable/blueselector"
            android:text="@string/vs_computer"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@id/vscomputer_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/orangeselector"
        android:text="@string/create_new_game"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.ads.AdView
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15060e571d4e43"
        ads:loadAdOnCreate="true"/>

</RelativeLayout>