<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff2f2f2">
    
    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_title"
		android:layout_centerHorizontal="true"
        android:paddingTop="6dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <EditText android:id="@+id/message_to_send"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:gravity="left|top"
        android:layout_below="@id/title"
        android:hint="@string/message_to_send"
        android:maxLength="200"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"/>
    <Button android:id="@+id/send_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_to_send"
        android:text="@string/submit"/>
    

</RelativeLayout>