<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allscreensbcg" >

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/darkbar" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/game_list"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.ads.AdView
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		ads:loadAdOnCreate="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15060e571d4e43"/>

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adview" >

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/orangeselector"
            android:text="@string/new_game"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/bottom_button_layout"
            android:layout_width="fill_parent"
            android:layout_below="@id/new_game_button"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".5"
                android:background="@drawable/blueselector"
                android:text="@string/logout"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/feedback_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".5"
                android:background="@drawable/blueselector"
                android:text="@string/send_feedback"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/logged_in_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bottom_button_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/game_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttons_layout"
        android:layout_below="@id/header_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedcornerlistview" >

        <TextView
            android:id="@+id/nogamestext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/no_games"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/games_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@android:color/transparent"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="4dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/getting_games_spinner"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>