<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allscreensbcg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/darkbar"
        android:gravity="center"
        android:text="@string/score_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/information_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/header"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/myPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/blankimage" />

            <TextView
                android:id="@+id/myscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/oppPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/blankimage" />

            <TextView
                android:id="@+id/oppscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/message_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
		android:layout_below="@id/information_layout"
        android:background="@drawable/blueselector"
        android:text="@string/message_friend"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/finish_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/message_friend"
        android:background="@drawable/blueselector"
        android:text="@string/finish_game"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.ads.AdView
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15060e571d4e43"
        ads:loadAdOnCreate="true" />

</RelativeLayout>