<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allscreensbcg" >

    <TextView
        android:id="@+id/turn_notifier"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/darkbar"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/word_to_enter_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/turn_notifier"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="10dp" >
        
        <ProgressBar
            android:id="@+id/sending_word"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/sendword"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentRight="true"
			android:layout_toLeftOf="@id/sending_word"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/orangeselector"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/word_to_enter"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_toLeftOf="@id/sendword"
            android:background="@drawable/customedittext" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/sendword_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/word_to_enter_layout"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/forfeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.45"
            android:background="@drawable/blueselector"
            android:text="@string/forfeit"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/message_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.55"
            android:background="@drawable/blueselector"
            android:text="@string/message_friend"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/lastword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendword_layout"
        android:layout_centerHorizontal="true" />

    <com.google.ads.AdView
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:loadAdOnCreate="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15060e571d4e43"/>

    <ListView
        android:id="@+id/wordlist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/adview"
        android:layout_below="@id/lastword"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/wordlistbcg"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent" />

</RelativeLayout>